[tool.poetry]
name = "randomfactory"
version = "1.0.1"
description = ""
authors = ["chavokim <treeboy0384@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
test = "randomfactory.test:main"

